fix 3 imperfections: When click forward button - in popup chats that have >= 3 lines in title we see 2.5 lines (3rd line gets cut) When click forward button - in popup chats - rows with chats that have 1 line in title and rows with chats that have 2 lines in title have same height - hence we see blank space in row with chats with 1 line in title When click forward button - in popup chats too close to each other - need to increase vertical margin

--- a/src/Components/Tile/ForwardTargetChat.css
+++ b/src/Components/Tile/ForwardTargetChat.css
@@ -13,6 +13,7 @@
     align-items: center;
     cursor: pointer;
     padding: 6px 0;
+    margin-bottom: 6px;
 }
 
 .forward-target-chat-tile {
@@ -83,9 +84,9 @@
 .forward-target-chat-title {
     max-width: 80px;
     font-size: 12px;
-    line-height: normal;
+    line-height: 17px;
     margin: 6px 0 0;
-    height: 32px;
+    max-height: 34px;
     text-align: center;
     text-overflow: ellipsis;
     overflow: hidden;
